Changed clover version to open Clover

--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.atlassian.maven.plugins</groupId>
-				<artifactId>maven-clover2-plugin</artifactId>
-				<version>4.0.6</version>
+				<groupId>org.openclover</groupId>
+				<artifactId>clover-maven-plugin</artifactId>
+				<version>4.2.0</version>
 				<configuration>
 					<generateXml>true</generateXml>
 					<generateHtml>false</generateHtml>
