--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,8 @@
 				<version>3.0.4</version>
 				<configuration>
 					<xmlOutput>true</xmlOutput>
-					<findbugsXmlOutputDirectory>${project.build.directory}/findbugs/${project.name}</findbugsXmlOutputDirectory>
+					<findbugsXmlOutputDirectory>${project.build.directory}/findbugs/${project.name}
+</findbugsXmlOutputDirectory>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -59,6 +60,19 @@
 						<CORONA_HOME>${project.parent.basedir}/analyser/src/main</CORONA_HOME>
 					</systemPropertyVariables>
 				</configuration>
+			</plugin>
+			<plugin>
+					<groupId>com.github.spotbugs</groupId>
+					<artifactId>spotbugs-maven-plugin</artifactId>
+						<version>3.1.3</version>
+					<dependencies>
+						<!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
+						<dependency>
+							<groupId>com.github.spotbugs</groupId>
+							<artifactId>spotbugs</artifactId>
+							<version>3.1.3</version>
+						</dependency>
+					</dependencies>
 			</plugin>
 		</plugins>
 	</build>
