--- a/subproject2/pom.xml
+++ b/subproject2/pom.xml
@@ -1,15 +1,24 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.acellere.corona</groupId>
-    <artifactId>corona</artifactId>
-    <version>0.6.5-SNAPSHOT</version>
-  </parent>
-  <packaging>pom</packaging>
-  <artifactId>subproject2</artifactId>
-  <name>subproject2</name>
-  <modules>
-  	<module>subproject2_A</module>
-  	<module>subproject2_B</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.acellere.corona</groupId>
+		<artifactId>corona</artifactId>
+		<version>0.6.5-SNAPSHOT</version>
+	</parent>
+	<packaging>pom</packaging>
+	<artifactId>subproject2</artifactId>
+	<name>subproject2</name>
+	<modules>
+		<module>subproject2_A</module>
+		<module>subproject2_B</module>
+	</modules>
+	<dependencies>
+		<dependency>
+			<groupId>com.acellere.corona</groupId>
+			<artifactId>subproject2_A</artifactId>
+			<version>0.6.5-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
