--- a/embold.yaml
+++ b/embold.yaml
@@ -20,3 +20,13 @@ sources:
     - 'libs'
     - '.git'
     - 'demosubproject'
+   
+# Specify the languages you would like to Scan. Default is all Detected
+languages: 'JAVA'
+
+
+# Define modules one would like to run or disable. This is enough for Basic Users
+# Get List of Modules (Which are Default Enabled/Disabled) at the documentation link above
+modules:
+  - name: pmd
+    enabled: true
